kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-hello-world
  labels:
    app: golang-hello-world
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: golang-hello-world
